[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Menu/Lobby Menu/LobbyMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI Elements/Menu Line Edit/MenuLineEdit.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI Elements/Menu Button/MenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Fonts/MenuLineEditFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/UI Elements/Logger/LoggerInterfaceV2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Menu/Lobby Menu/PreServerSetupUI.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Menu/Lobby Menu/LobbyUI.gd" type="Script" id=7]
[ext_resource path="res://Resources/Fonts/BaseFontSize30.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.176, 0.33, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.062745, 0.521569, 0.764706, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.1554, 0.29652, 0.42, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.176, 0.33, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.062745, 0.521569, 0.764706, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.1554, 0.29652, 0.42, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.176, 0.33, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.062745, 0.521569, 0.764706, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.1554, 0.29652, 0.42, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0.176, 0.33, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.062745, 0.521569, 0.764706, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.1554, 0.29652, 0.42, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="LobbyMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.53, 0.81, 0.98, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreServerSetupUI" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -280.0
margin_right = 250.0
margin_bottom = 280.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PreServerSetupUI"]
margin_right = 500.0
margin_bottom = 560.0
custom_constants/separation = 30

[node name="PlayerNameLineEdit" parent="PreServerSetupUI/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 500.0
margin_bottom = 50.0
placeholder_text = "Player Name"

[node name="ReferenceRect" type="ReferenceRect" parent="PreServerSetupUI/VBoxContainer"]
margin_top = 80.0
margin_right = 500.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 50 )

[node name="CenterContainer" type="CenterContainer" parent="PreServerSetupUI/VBoxContainer"]
margin_top = 160.0
margin_right = 500.0
margin_bottom = 340.0

[node name="VBoxContainer" type="VBoxContainer" parent="PreServerSetupUI/VBoxContainer/CenterContainer"]
margin_left = 100.0
margin_right = 400.0
margin_bottom = 180.0
custom_constants/separation = 20

[node name="StartButton" parent="PreServerSetupUI/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 300.0
margin_bottom = 80.0
custom_colors/font_color_disabled = Color( 0.612, 0.675467, 0.68, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "Start Server"

[node name="BackButton" parent="PreServerSetupUI/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 100.0
margin_right = 300.0
margin_bottom = 180.0
custom_colors/font_color_disabled = Color( 0.612, 0.675467, 0.68, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
text = "Back"

[node name="ConnectionErrorLabel" type="Label" parent="PreServerSetupUI/VBoxContainer"]
visible = false
margin_top = 370.0
margin_right = 500.0
margin_bottom = 405.0
custom_colors/font_color = Color( 0.858824, 0, 0.243137, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Unable to start the server."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyUI" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -888.0
margin_top = -471.0
margin_right = 889.0
margin_bottom = 471.0
script = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="LobbyUI"]
margin_right = 1777.0
margin_bottom = 942.0

[node name="LoggerInterfaceV2" parent="LobbyUI/HBoxContainer" instance=ExtResource( 5 )]
margin_right = 500.0
margin_bottom = 942.0
rect_min_size = Vector2( 500, 200 )

[node name="ReferenceRect" type="ReferenceRect" parent="LobbyUI/HBoxContainer"]
margin_left = 504.0
margin_right = 554.0
margin_bottom = 942.0
rect_min_size = Vector2( 50, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyUI/HBoxContainer"]
margin_left = 558.0
margin_right = 1777.0
margin_bottom = 942.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayersTextLabel" type="RichTextLabel" parent="LobbyUI/HBoxContainer/VBoxContainer"]
margin_right = 1219.0
margin_bottom = 858.0
rect_min_size = Vector2( 400, 500 )
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="LobbyUI/HBoxContainer/VBoxContainer"]
margin_top = 862.0
margin_right = 1219.0
margin_bottom = 942.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="LobbyUI/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_right = 300.0
margin_bottom = 80.0
custom_colors/font_color_disabled = Color( 0.612, 0.675467, 0.68, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "Back"

[node name="StartGameButton" parent="LobbyUI/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 320.0
margin_right = 620.0
margin_bottom = 80.0
custom_colors/font_color_disabled = Color( 0.612, 0.675467, 0.68, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 10 )
text = "Start Game"

[connection signal="button_up" from="PreServerSetupUI/VBoxContainer/CenterContainer/VBoxContainer/StartButton" to="PreServerSetupUI" method="_on_StartButton_button_up"]
[connection signal="button_up" from="PreServerSetupUI/VBoxContainer/CenterContainer/VBoxContainer/BackButton" to="PreServerSetupUI" method="_on_BackButton_button_up"]
[connection signal="visibility_changed" from="LobbyUI" to="LobbyUI" method="_on_LobbyUI_visibility_changed"]
[connection signal="button_up" from="LobbyUI/HBoxContainer/VBoxContainer/HBoxContainer/BackButton" to="LobbyUI" method="_on_BackButton_button_up"]
[connection signal="button_up" from="LobbyUI/HBoxContainer/VBoxContainer/HBoxContainer/StartGameButton" to="LobbyUI" method="_on_StartGameButton_button_up"]
